@@ -41,6 +41,7 @@ rb-attach-search-results-description=If enabled, clicking a search result will o
 rb-attach-search-results=Open search results in an attached info GUI
 rb-base-pollution=Base pollution
 rb-base-pollution-desc=The actual pollution rate may vary depending on the fluid burned.
+rb-beacon=Beacon
 rb-buffer-capacity=Buffer capacity
 rb-burned-in=Burned in
 rb-burnt-result=Burnt result
@@ -75,6 +76,8 @@ rb-delete-favorites=Delete favorites
 rb-delete-history=Delete history
 rb-detach-instruction=Detach information window
 rb-disabled-abbrev=(D)
+rb-distribution-effectivity=Distribution effectivity
+rb-effect-area=Effect area
 rb-energy-consumption=Energy consumption
 rb-energy-per-shield-point=Energy per shield point
 rb-energy-production=Energy production
@@ -133,6 +136,7 @@ rb-mining-drills=Mining drills
 rb-mining-speed=Mining speed
 rb-mining-time=Mining time
 rb-module-effects=Module effects
+rb-module-slots=Module slots
 rb-modules=Modules
 rb-no-content-warning=[img=warning-white] Nothing to show based on current settings.
 rb-no-results=[img=warning-white] No results.
